<resources>
    <string name="app_name">Story App</string>

    <!-- Button Text -->
    <string name="button_sign_in">Sign In</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="button_register">Doesn\'t have account? Register here</string>

    <!-- Page Title -->
    <string name="add_new_story_title">Add New Story</string>
    <string name="home_title">Home</string>

    <!-- Text PlaceHolder -->
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="register_title">Register Account</string>
    <string name="register_title_description">Input your credential to register a new account</string>
    <string name="login_title">Login</string>
    <string name="login_title_description">Input your credential before continue to Home Page</string>
    <string name="username">Username</string>
    <string name="add_story">Add Story</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="image_not_found">Image not found</string>
    <string name="description_cannot_empty">Description must not be empty</string>
    <string name="logout">Logout</string>
    <string name="have_been_logged_out">You have been logged out</string>
    <string name="pressback_once_again">Press Back once again to logout</string>
    <string name="empty_data">Empty Data</string>
    <string name="story_details">Story Details</string>
    <string name="uploaded_by">Uploaded by %s</string>
    <string name="choose_language">Choose Language</string>
    <string name="image_photo">Image Photo</string>
    <string name="empty_story">Empty Story</string>

    <!-- Widget Text -->
    <string name="appwidget_text">Story App</string>
    <string name="add_widget">Add Story App Widget</string>
    <string name="app_widget_description">The Story App</string>

    <!-- Edit Text Component -->
    <string name="password_must_more_than_6">Password must be more than 6 characters</string>
    <string name="check_your_email">Please check your email</string>
    <string name="check_password">Please check your password</string>
    <string name="email_must_valid">Email must be valid and not empty</string>
    <string name="open_maps">Open maps</string>
    <string name="data_empty">Data is empty</string>
    <string name="retry">Retry</string>
</resources>
